--- a/dialogic/themes/default-theme.cfg
+++ b/dialogic/themes/default-theme.cfg
@@ -28,7 +28,7 @@ is_hidden=true
 typing={
 "allow_interrupt": true,
 "audio_bus": "Master",
-"enable": false,
+"enable": true,
 "path": "res://addons/dialogic/Example Assets/Sound Effects/Beep.wav",
 "pitch": 0.35,
 "pitch_rand_range": 0.0,
